Fix too wide Title in MinecraftCard

--- a/src/styles/mc.scss
+++ b/src/styles/mc.scss
@@ -18,6 +18,7 @@ $sm: 576px;
 	width: 100%;
 	background-color: transparent;
 	overflow: hidden;
+	position: relative;
 }
 
 .mc-bg-container {
@@ -63,7 +64,7 @@ $sm: 576px;
 		box-shadow: 0 0 10px $fav-icon-bg;
 		position: relative;
 		top: 20px;
-		margin-right: 40px;
+		margin-right: 20px;
 	}
 }
 
